# agent-bus

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  discord-webhooks.example.json  docker-compose.yml  pyproject.toml  render.yaml
deploy/: README.md  render.yaml
examples/: agent-bus.service  codex-config.toml  cursor-mcp.json
scripts/: team-connect.sh
src/agent_bus/: __init__.py  cli.py  client.py  config.py  discord.py  mcp_server.py  runner.py  server.py  store.py  util.py
tests/: test_api.py  test_config.py  test_discord.py  test_store.py
